--- a/templates/tests_manufacturers.html
+++ b/templates/tests_manufacturers.html
@@ -10,7 +10,7 @@
   <body>
     <button id="back"><a href="/">Main page</a></button>
 
-    <h1>Minimal web portal consuming our API REST about Covid-19 tests TEST ROMAN</h1>
+    <h1>Minimal web portal consuming our API REST about Covid-19 tests</h1>
 
     <div id="container" class="manufactures">
       <h2>Manufacturers of covid tests:</h2>
