--- a/templates/root.html
+++ b/templates/root.html
@@ -22,7 +22,7 @@
     <footer>
         <img id="logo" src="static/logo-covid.png">
         <h3>By Roman Soroka</h3>
-        <h4>for URJC Telecomunication Master</h4>
+        <h4>for URJC Telecomunication Master (TEST)</h4>
     </footer>
     </body>
 </html>
